# tell-me-the-odds

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Readme.md  cli.Dockerfile  deny.toml
.github/workflows/: audit.yml  build_test.yml  publish_docker.yml
.sqlx/: query-106c7c1813f1317f7eb9e091a9afd2a2df3ad457d4116bf8a2fbd654295c3ca0.json  query-5f78a2e784e38a5d2b280e97864a78e4e3f2dacfbc19cc8739beceb117351c40.json
front/: index.html
src/: application_services.rs  cli.rs  domain_model.rs  domain_models.rs  domain_services.rs  infrastructure_service.rs  lib.rs  main.rs
src/infrastructure_services/: actix.rs  args.rs  db.rs  mod.rs
tests/: health_check.rs  server_tests.rs
