[package]
name = "millennium_falcon"
version = "1.0.1"
license = "MIT"
edition = "2021"
default-run = "millennium_falcon"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "millennium_falcon"

[[bin]]
path = "src/cli.rs"
name = "give-me-the-odds"

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
itertools = "0.12.0"
reqwest = "0.11.23"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
sqlx = {version = "0.7.3", default-features = false, features = ["runtime-tokio", "sqlite", "macros"]}
thiserror = "1.0.56"
tokio = {version = "1.35.1", features = ["full"]}
tracing = {version="0.1.40", features = ["log"]}
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
